--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,10 @@ yarn-error.log
 .settings/
 *.sublime-workspace
 
+# dotenv environment variables
+.env
+src/environments/
+
 # Visual Studio Code
 .vscode/*
 !.vscode/settings.json
