--- a/.gitignore
+++ b/.gitignore
@@ -21,9 +21,8 @@ yarn-error.log
 *.sublime-workspace
 
 # dotenv environment variables
-.env
-src/environments/environment.prod.ts
-src/environments/environment.ts
+./.env
+
 
 # Visual Studio Code
 .vscode/*
